
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static void shadername_convert( char* shaderName ){

 char* s = shaderName;
 for (; *s != '\0'; ++s )
 {
  if ( *s == '\\' ) {
   *s = '/';
  }
 }
}
